--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Jacajack's stuff
-theme: jekyll-theme-midnight
+theme: minimal
 email: mrjjot@gmail.com
 description: >- 
  What happens next?
