--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Jacajack's stuff
 theme: minimal
 email: mrjjot@gmail.com
 description: >- 
- What happens next?
+ I like doing stuff.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
